@@ -62,6 +62,15 @@
 
 
 /*
+ * Define to 1 if you have strings.h available on your platform.
+ */
+#define BSON_HAVE_STRINGS_H @BSON_HAVE_STRINGS_H@
+#if BSON_HAVE_STRINGS_H != 1
+# undef BSON_HAVE_STRINGS_H
+#endif
+
+
+/*
  * Define to 1 if you have strnlen available on your platform.
  */
 #define BSON_HAVE_STRNLEN @BSON_HAVE_STRNLEN@
