@@ -29,7 +29,7 @@
 #include "../test-libmongoc.h"
 #include "../TestSuite.h"
 
-#ifdef HAVE_STRINGS_H
+#ifdef BSON_HAVE_STRINGS_H
 #include <strings.h>
 #endif
 
