@@ -28,7 +28,7 @@
 #include "test-conveniences.h"
 #include "TestSuite.h"
 
-#ifdef HAVE_STRINGS_H
+#ifdef BSON_HAVE_STRINGS_H
 #include <strings.h>
 #endif
 
