@@ -19,7 +19,7 @@
 #include "mock_server/mock-rs.h"
 
 
-#ifdef HAVE_STRINGS_H
+#ifdef BSON_HAVE_STRINGS_H
 #include <strings.h>
 #endif
 
