@@ -4,6 +4,9 @@ Next release
 This version drops support for MongoDB 2.6 and adds the following features and
 bugfixes:
 
+  * The internal preprocessor symbol HAVE_STRINGS_H has been renamed
+    BSON_HAVE_STRINGS_H. If you maintain a handwritten bson-config.h you must
+    rename this symbol.
   * The driver now handshakes SSL connections to multiple servers in a replica
     set or sharded cluster in parallel, so long as it uses OpenSSL or Windows
     SChannel. (SSL handshakes with Apple's Secure Transport are still serial.)
